On the road to 2026.01:
- updated grub to 2.14
Environment:
- switched to KMSCON as Virtual Console VC/VT provider
- new MOTD
- moved bandwhich network status to VC4
- moved btm system status to VC5
- moved now colored log on VC8 and saved to /tmp/archboot.log 
- moved now colored journal on VC9 
- added pigz to packages
- added /usr/lib/gnupg programs
- removed custom modprobe.conf
defaults:
- added all supported firmware packages to _GRAPHIC_IGNORE list
init:
- added checks for intel firmware to only extract it one time
  --> improved boot time on intel systems
clock:
- added 10 seconds timeout for _ZONE detection
container:
- fixed clean cache function
firmware:
- removed bnx2x firmware
- added broadcom wireless firmware
- removed sdca firmware
launcher:
- added Cosmic desktop environment
login:
- added 30 second timeout to download autorun.sh
sway:
- fixed keyboard layout on sway startup
pacsetup:
- added 10 seconds timeout on geoip and mirrorlist fetching
update:
- lowered requirement of package cache inclusion on 
  new environment routine to 3G RAM
- highered requirement of creation of new images routine to 5.5G RAM
- added autodetection of firmware packages on new environment routine
- added all supported firmware packages in new images routine
- added 10 seconds timeout on geoip and mirrorlist fetching
---
Highlights 2025.12:
- kernel 6.18.x
- systemd 259.x 
- updated IPXE to 20251230
- fedora shim 16.1-5
Environment:
- added netshaper binary
- removed efi_pstore values from modprobe.conf
- added XDG_SESSION_TYPE=wayland to tty1 systemd service file
- retrigger udev events before starting desktop environment
defaults:
- increased ZRAM disk size to 6G to fit for full system and gnome desktop
network:
- ensure same persistent names for network devices
setup/quickinst:
- fixed pacman CACHEDIR creation
tarball:
- disable alpm DownloadUser on container tarball
---
Highlights 2025.11:
- updated IPXE to 20251101
- added phy network modules
- added mfd modules