@@ -17,7 +17,7 @@
 <h1>Archboot Home | <a href="gallery.html">Gallery</a> | <a href="https://donate.stripe.com/fZu6oHc9T48TeTrg5HcV200"><img src="donate.png" alt="Donate"></a></h1>
 <h2>2026 Fundraise: 0% <progress max="100" value="0">0%</progress> 100%</h2>
 <p><strong>&copy; 2006 - 2026 | <a href=mailto:tpowa@archlinux.org>Tobias Powalowski</a></strong> | Arch Linux Developer <strong><a href="https://archlinux.org/people/developers/#tpowa">tpowa</a></strong><br>
-<strong>Last update: 23.01.2026 09:35</strong></p>
+<strong>Last update: 23.01.2026 10:19</strong></p>
 <nav id="TOC" role="doc-toc">
 <ul>
 <li><a href="#introduction" id="toc-introduction"><strong><span class="toc-section-number">1.</span> Introduction</strong></a></li>
@@ -192,11 +192,11 @@ utility to generate <strong>reproducible</strong> bootable media for <strong>UKI
 <td>2100M</td>
 <td class="MyNo">&#10006;</td>
 <td class="MyOpt">local DHCP<br>server needed</td>
-<td class="MyOpt">&gt;= 3G RAM<br>needed</td>
+<td class="MyOpt">&gt;= 3.6G RAM<br>needed</td>
 </tr>
 <tr class="odd">
 <td><strong><em>date</em>-local</strong></td>
-<td>3000M</td>
+<td>3600M</td>
 <td class="MyYes">&#10004;</td>
 <td class="MyYes">&#10004;</td>
 <td class="MyYes">&#10004;</td>
@@ -889,7 +889,7 @@ The calculated size to boot the image follows the formula:<br>
 </tr>
 <tr class="odd">
 <td>Minimum RAM to boot in MiB<sup>3</sup></td>
-<td class="MyYes">600</td>
+<td class="MyYes">650</td>
 <td class="MyNo">820</td>
 </tr>
 <tr>
